--- a/CarSalesApp1/bin/CarSalesApp1.dll.config
+++ b/CarSalesApp1/bin/CarSalesApp1.dll.config
@@ -74,6 +74,5 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="StoreDBEntities" connectionString="metadata=res://*/StoreModel.csdl|res://*/StoreModel.ssdl|res://*/StoreModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-FRVCKQT;initial catalog=StoreDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <add name="StoreDBEntities" connectionString="metadata=res://*/StoreModel.csdl|res://*/StoreModel.ssdl|res://*/StoreModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:storedb1.database.windows.net;initial catalog=StoreDB;user id=bradlangs;password=Langrbad1;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
