--- a/CarSalesApp1/CarSalesApp1.csproj
+++ b/CarSalesApp1/CarSalesApp1.csproj
@@ -187,6 +187,11 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\images\1b62d9c373df548186ca437f3a94d547.jpg" />
+    <Content Include="App_Data\images\honda-civic.png" />
+    <Content Include="App_Data\images\MS_Transparent_Background.png" />
+    <Content Include="App_Data\images\profile.png" />
+    <Content Include="App_Data\images\Youxia.png" />
     <Content Include="Content\app.css" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
@@ -270,7 +275,6 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
